# claude-excel-archive

./: .gitignore  Excel Archive.spec  README.md  launcher.py  pyproject.toml  setup_app.py
docs/: CLAUDE_FOR_EXCEL.md  CLAUDE_FOR_EXCEL_ARCHITECTURE.md  CLAUDE_FOR_EXCEL_DECODE.md
scripts/: build_app.sh  run_menu_bar_dev.sh
src/excel_archive/: __init__.py  active_workbook.py  app.py  cli.py  config_excel.py  copy.py  daemon.py  decode.py  idb_extract.py  index_md.py  journal.py  match_workbook.py  merge.py  navigation.py  paths.py  render_tape.py  resources.py  retention.py  runtime.py  snip.py  structured_clone.py  updater.py  watch.py  watch_lock.py  workbook_attribution.py  workbook_copy.py  workbook_migration.py
tests/: test_excel_attribution.py  test_excel_cli.py  test_excel_copy_rolling.py  test_excel_decode.py  test_excel_journal.py  test_excel_match_workbook.py  test_excel_merge.py  test_excel_migration.py  test_excel_multi_chat.py  test_excel_navigation.py  test_excel_snip.py  test_excel_tape.py  test_excel_updater.py  test_excel_watch_journal.py  test_excel_watch_lock.py
tests/fixtures/: minimal_export.json
